24 tests missing, could have been worse